fix: uso de overflow para evitar a quebra de linha nos radios buttons

--- a/src/style/CategoryButton.css
+++ b/src/style/CategoryButton.css
@@ -2,7 +2,11 @@ fieldset label {
   background-color: #aaa;
   border-radius: 10px;
   flex: 1 1 auto;
-  max-width: 33%;
+  max-width: 31%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
 }
 
 /* .btn-check {
